WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
79864
RefCounted::deprecatedTurnOfVerifier() should not be deprecated
https://bugs.webkit.org/show_bug.cgi?id=79864
Summary
RefCounted::deprecatedTurnOfVerifier() should not be deprecated
Filip Pizlo
Reported
2012-02-28 21:10:20 PST
It is necessary to call this in the constructor of many objects in JavaScriptCore, because JavaScriptCore objects may be used from multiple threads even if the reference counting is done in a racy manner. This is because a JSC instance may be used from multiple threads so long as all accesses into that instance are protected by a per-instance lock. It would be absolutely wrong to prohibit this pattern, and it would be a disastrous regression to requite that the objects within that instance use a thread-safe version of reference counting. Hence the notion that this method should be deprecated is entirely misguided until a credible, low-overhead verifier is implemented, which can understand JavaScriptCore's well-designed thread safety patterns while also not created confusing noise in our code base.
Attachments
the patch
(4.23 KB, patch)
2012-02-28 22:28 PST
,
Filip Pizlo
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2012-02-28 22:28:18 PST
Created
attachment 129390
[details]
the patch
Filip Pizlo
Comment 2
2012-02-29 16:15:26 PST
Landed in
http://trac.webkit.org/changeset/109268
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug