RefCounted::deprecatedTurnOffVerifier() should not be deprecated https://bugs.webkit.org/show_bug.cgi?id=79864

Reviewed by Oliver Hunt.

Removed the word "deprecated" from the name of this method, since this method
should not be deprecated. It works just fine as it is, and there is simply no
alternative to calling this method for many interesting JSC classes.

* parser/SourceProvider.h:
(JSC::SourceProvider::SourceProvider):
* runtime/SymbolTable.h:
(JSC::SharedSymbolTable::SharedSymbolTable):
* wtf/MetaAllocator.cpp:
(WTF::MetaAllocatorHandle::MetaAllocatorHandle):
(WTF::MetaAllocator::allocate):
* wtf/RefCounted.h:
(RefCountedBase):
(WTF::RefCountedBase::turnOffVerifier):



Canonical link: https://commits.webkit.org/97022@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109268 268f45cc-cd09-0410-ab3c-d52691b4dbfc